fix: add item truncation to breadcrumb-bar

--- a/src/components/breadcrumb-bar/breadcrumb-bar.module.css
+++ b/src/components/breadcrumb-bar/breadcrumb-bar.module.css
@@ -18,7 +18,8 @@
 }
 
 .listItem {
-  border: 1px solid magenta;
+  display: flex;
+
   &:not(:last-child)::after {
     color: var(--token-color-palette-neutral-400);
     content: '/';
@@ -28,6 +29,10 @@
 
 .breadcrumbText {
   color: var(--token-color-palette-neutral-500);
+  max-width: 16em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   &[href]:hover {
     color: var(--token-color-palette-neutral-600);
